--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
-  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --ignore 'src/lib/**/*.test.js'",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore '*.test.js'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +39,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
+  },
+  "dependencies": {
+    "babel-plugin-react-css-modules": "^5.2.6"
   }
 }
