--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored --verbose",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,7 +34,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "cra-template": "^1.1.2",
+    "enzyme": "^3.11.0",
+    "jest-enzyme": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
