--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored --verbose",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --no-copy-ignored --verbose && rm -rf dist/SelectMenu/__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
